--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
   "devDependencies": {
     "@rollup/plugin-dynamic-import-vars": "^2.0.5",
     "vite": "^4.4.9"
+  },
+  "scripts": {
+    "build": "vite build",
+    "preview": "vite preview"
   }
 }
